[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/map.png" type="Texture" id=4]
[ext_resource path="res://assets/player_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/hud_theme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0, 0.0, 2.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 12.5

[sub_resource type="CircleShape2D" id=3]
radius = 12.5

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 5 )
anims/Walking = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
smoothing_enabled = true

[node name="HarvestArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="HarvestArea"]
shape = SubResource( 2 )

[node name="HouseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="HouseArea"]
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Map" type="TextureRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 410.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="PlayerPos" type="TextureRect" parent="CanvasLayer/Map"]
modulate = Color( 2, 2, 2, 1 )
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -310.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 6 )

[node name="Panel" type="Panel" parent="CanvasLayer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 292.0

[node name="CMissions" type="RichTextLabel" parent="CanvasLayer/PanelContainer/Panel"]
anchor_right = 1.0
margin_bottom = 40.0
bbcode_enabled = true
bbcode_text = "[u]Completed Missions:[/u] 0"
text = "Completed Missions: 0"

[node name="RTLabel" type="RichTextLabel" parent="CanvasLayer/PanelContainer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -244.0
margin_right = 117.0
bbcode_enabled = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[connection signal="area_entered" from="HarvestArea" to="." method="_on_HarvestArea_entered"]
[connection signal="area_exited" from="HarvestArea" to="." method="_on_HarvestArea_exited"]
[connection signal="area_entered" from="HouseArea" to="." method="_on_HouseArea_entered"]
[connection signal="area_exited" from="HouseArea" to="." method="_on_HouseArea_exited"]
[connection signal="finished" from="SFX" to="." method="_on_SFX_finished"]
